kubernetes/apps/wallos/wallos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallos
  namespace: wallos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallos
  template:
    metadata:
      labels:
        app: wallos
    spec:
      containers:
        - name: wallos
          image: bellamy/wallos:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: db
              mountPath: /var/www/html/db
            - name: uploads
              mountPath: /var/www/html/images/uploads
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: wallos-db-nfs
        - name: uploads
          persistentVolumeClaim:
            claimName: wallos-uploads-nfs
---
apiVersion: v1
kind: Service
metadata:
  name: wallos
  namespace: wallos
spec:
  selector:
    app: wallos
  ports:
    - port: 80
